--- a/task_tracker/pubspec.yaml
+++ b/task_tracker/pubspec.yaml
@@ -26,10 +26,16 @@ dependencies:
   fancy_bottom_navigation: 0.3.2
   flutter_staggered_animations: 0.1.2
   flutter_spinkit: 4.0.0
-
-
   flutter_bloc: 1.0.0
   equatable: 0.6.1
+  sqflite:
+  path:
+  toast: 0.1.5
+  modal_progress_hud:
+  cloud_firestore: 0.12.9+6
+
+
+
 
 
 
