--- a/task_tracker/pubspec.yaml
+++ b/task_tracker/pubspec.yaml
@@ -34,13 +34,9 @@ dependencies:
   modal_progress_hud:
   cloud_firestore: 0.12.9+6
   firebase_auth: 0.14.0+5
-
-
-
-
-
-
-
+  charts_flutter: 0.8.1
+  flutter_circular_chart: 0.1.0
+  flutter_swiper: 1.1.6
 
 dev_dependencies:
   flutter_test:
