--- a/task_tracker/pubspec.yaml
+++ b/task_tracker/pubspec.yaml
@@ -36,7 +36,18 @@ dependencies:
   firebase_auth: 0.14.0+5
   charts_flutter: 0.8.1
   flutter_circular_chart: 0.1.0
-  flutter_swiper: 1.1.6
+  flutter_swiper:
+  onesignal: 1.1.0
+  flutter_local_notifications: 0.8.4
+  flutter_colorpicker:
+  rxdart: 0.22.6
+#  audioplayer: 0.5.2
+
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
